--- a/app/src/main/res/layout/activity_display_translated.xml
+++ b/app/src/main/res/layout/activity_display_translated.xml
@@ -10,4 +10,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.nat.essle.DisplayTranslatedActivity">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="47dp"
+        android:layout_marginStart="47dp"
+        android:id="@+id/button3"
+        android:onClick="saveMessage"
+        tools:text="@string/save_button"
+        android:text="@string/save_button" />
 </RelativeLayout>
