--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -32,15 +32,34 @@
         android:text="@string/translate_button" />
 
     <Button
-        android:text="@string/learn_button"
+        android:text="@string/flashcards_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button"
+        android:id="@+id/button4"
+        android:layout_alignBottom="@+id/button2"
+        android:layout_alignRight="@+id/edit_text"
+        android:layout_alignEnd="@+id/edit_text"
+        android:layout_marginBottom="66dp" />
+
+    <Button
+        android:text="@string/quiz_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button5"
+        android:layout_alignBaseline="@+id/button4"
+        android:layout_alignBottom="@+id/button4"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="46dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="120dp"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="@string/viewsaved_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:onClick="learn"
-        android:id="@+id/button2" />
+        android:id="@+id/button2"
+        android:layout_marginLeft="18dp"
+        android:layout_marginStart="18dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
