--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,17 +10,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.nat.essle.HomeActivity">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="@string/enter_message"
-        android:ems="10"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/edit_text" />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -31,35 +20,50 @@
         android:onClick="sendMessage"
         android:text="@string/translate_button" />
 
-    <Button
-        android:text="@string/flashcards_button"
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button4"
-        android:layout_alignBottom="@+id/button2"
-        android:layout_alignRight="@+id/edit_text"
-        android:layout_alignEnd="@+id/edit_text"
-        android:layout_marginBottom="66dp" />
+        android:inputType="textPersonName"
+        android:hint="@string/enter_message"
+        android:ems="10"
+        android:id="@+id/edit_text"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:text="@string/quiz_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button5"
-        android:layout_alignBaseline="@+id/button4"
-        android:layout_alignBottom="@+id/button4"
+        android:layout_marginLeft="31dp"
+        android:layout_marginStart="31dp"
+        android:layout_below="@+id/button"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="127dp" />
+
+    <Button
+        android:text="@string/flashcards_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button4"
+        android:layout_marginLeft="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_alignBaseline="@+id/button5"
+        android:layout_alignBottom="@+id/button5"
+        android:layout_toRightOf="@+id/button5"
+        android:layout_toEndOf="@+id/button5" />
 
     <Button
         android:text="@string/viewsaved_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="learn"
+        android:layout_marginTop="19dp"
         android:id="@+id/button2"
-        android:layout_marginLeft="18dp"
-        android:layout_marginStart="18dp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:onClick="viewSaved"
+        android:layout_below="@+id/button5"
+        android:layout_alignRight="@+id/edit_text"
+        android:layout_alignEnd="@+id/edit_text" />
+
 </RelativeLayout>
