--- a/app/src/main/res/layout/activity_view_saved.xml
+++ b/app/src/main/res/layout/activity_view_saved.xml
@@ -10,4 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.nat.essle.ViewSavedActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView" />
 </RelativeLayout>
